Config to enable RT on Android SM5 devices
#rb Jack.Porter
#preflight none

[CL 25302841 by carl lloyd in ue5-main branch]

--- a/Engine/Config/Android/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Android/DataDrivenPlatformInfo.ini
@@ -51,7 +51,7 @@ ActiveIconName=LevelEditor.PreviewMode.AndroidVulkanSM5.Enabled
 InactiveIconName=LevelEditor.PreviewMode.AndroidVulkanSM5.Disabled
 MenuTooltip=NSLOCTEXT("PreviewPlatform", "PreviewMenuTooltip_AndroidVulkanSM5", "Mobile preview using Android Vulkan SM5 quality settings.")
 IconText=NSLOCTEXT("PreviewPlatform", "PreviewIconText_AndroidVulkanSM5", "Android VK SM5")
-DeviceProfileName=Android
+DeviceProfileName=Android_Vulkan_SM5
 
 [ShaderPlatform OPENGL_ES3_1_ANDROID]
 Language=OpenGL
@@ -86,7 +86,19 @@ ShaderFormat=SF_VULKAN_SM5_ANDROID
 bTargetsTiledGPU=true
 bNeedsOfflineCompiler=true
 bSupportsIndexBufferUAVs=true
-bSupportsManualVertexFetch=false
 bRequiresDisableForwardLocalLights=true
 bWaterUsesSimpleForwardShading=true
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_AndroidVulkanSM5", "Android Vulkan SM5")
+; Raytracing and Lumen
+bSupportsManualVertexFetch=true
+bSupportsRayTracing = true
+bSupportsRayTracingShaders = false
+bSupportsInlineRayTracing = true
+bSupportsRayTracingIndirectInstanceData = true
+bSupportsByteBufferComputeShaders = true
+bEnableRayTracing=true
+bSupportsGPUSkinCache=true
+EnablesHLSL2021ByDefault=1
+bSupportsGPUScene=true
+bSupportsLumenGI=true
+bSupportsDistanceFields=true
+bSupportsDualSourceBlending=false
