--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2352,7 +2352,7 @@ HighDetail=(NumLODs=6,MaxNumStreamedLODs=0,bSupportLODStreaming=0,LODPercentTria
 PathToRAC=RuntimeAssetCache
 
 [Zen]
-AutoLaunch=true
+AutoLaunch=false
 
 [Zen.AutoLaunch]
 DataPath=%APPSETTINGSDIR%Zen/Data
@@ -2946,6 +2946,7 @@ bDisableFunctionDataSections=False
 bEnableAdvancedBinaryCompression=True
 bDisableStackProtector=False
 bEnableMulticastSupport=False
+bEnableRayTracing=true
 
 [/Script/AndroidPlatformEditor.AndroidSDKSettings]
 SDKAPILevel=latest
