Moved VCamExtensions and VCamExtensionsEditor from VirtualCameraCore to VirtualCamera
#jira none
#rb none
#preflight https://horde.devtools.epicgames.com/stream/ue5-main?tab=Presubmit
#fyi Jason.Walter

[CL 25314965 by Dominik Peacock in ue5-main branch]

--- a/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
+++ b/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
@@ -22,6 +22,18 @@
  		"Win64",
  		"Linux"
  	],
+	"Modules": [
+		{
+			"Name": "VCamExtensions",
+			"Type": "Runtime",
+			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "VCamExtensionsEditor",
+			"Type": "Editor",
+			"LoadingPhase": "Default"
+		}
+	],
 	"Plugins": [
 		{
 			"Name" : "VirtualCameraCore",
