--- a/Engine/Plugins/Experimental/VirtualCameraCore/Config/BaseVirtualCameraCore.ini
+++ b/Engine/Plugins/Experimental/VirtualCameraCore/Config/BaseVirtualCameraCore.ini
@@ -5,3 +5,6 @@
 +FunctionRedirects=(OldName="VCamComponent.FindModifierByName",NewName="VCamComponent.GetModifierByName")
 +FunctionRedirects=(OldName="VCamComponent.FindModifiersByClass",NewName="VCamComponent.GetModifiersByClass")
 +FunctionRedirects=(OldName="VCamComponent.FindModifierByInterface",NewName="VCamComponent.GetModifiersByInterface")
+
+; 5.2 > 5.3
++ClassRedirects=(OldName="/Script/PixelStreamingVCam.VCamPixelStreamingSession",NewName="/Script/DecoupledOutputProvider.VCamPixelStreamingSession")
