Added convenience functions in data collections to simplify blueprint implementation Added Get Context call in blueprint to be able to remove some context parameters in future CLs.
#rb adrien.logut, thomas.tedemalm
#preflight 6453ad7f743c256cd6faf5c4
#fyi jeansebastien.guay, antoine.guilbaud

[CL 25333738 by julien lheureux in ue5-main branch]

--- a/Engine/Plugins/Experimental/PCG/Config/BasePCG.ini
+++ b/Engine/Plugins/Experimental/PCG/Config/BasePCG.ini
@@ -5,6 +5,8 @@
 +FunctionRedirects=(OldName="PCGBlueprintElement.MultiLoopOnPoints",NewName="PCGBlueprintElement.VariableLoop")
 +FunctionRedirects=(OldName="PCGBlueprintElement.LoopOnPointPairs",NewName="PCGBlueprintElement.NestedLoop")
 +FunctionRedirects=(OldName="PCGBlueprintElement.LoopNTimes",NewName="PCGBlueprintElement.IterationLoop")
++FunctionRedirects=(OldName="PCGBlueprintElement.InputLabels",NewName="PCGBlueprintElement.CustomInputLabels")
++FunctionRedirects=(OldName="PCGBlueprintElement.OutputLabels",NewName="PCGBlueprintElement.CustomOutputLabels")
 +PropertyRedirects=(OldName="PCGSplineSamplerSettings.Params",NewName="PCGSplineSamplerSettings.SamplerParams")
 +PropertyRedirects=(OldName="PCGProjectionSettings.Params",NewName="PCGProjectionSettings.ProjectionParams")
 +PropertyRedirects=(OldName="PCGBlueprintElement.IterationLoop.InA",NewName="PCGBlueprintElement.IterationLoop.OptionalA")
