PR #10127: Add missing SupportedTargetPlatforms for VisualStudioSourceCodeAccess (Contributed by MalikuMane)
https://jira.it.epicgames.com/browse/UE-177285


#ushell-cherrypick of 24250895 by UnrealBot
#preflight 6453cea61c2846595c68cbf1
#rb tim.smith

[CL 25336010 by MalikuMane in ue5-main branch]

--- a/Engine/Plugins/Developer/VisualStudioSourceCodeAccess/VisualStudioSourceCodeAccess.uplugin
+++ b/Engine/Plugins/Developer/VisualStudioSourceCodeAccess/VisualStudioSourceCodeAccess.uplugin
@@ -15,6 +15,7 @@
 	"IsBetaVersion" : false,
 	"Installed" : false,
 	"SupportedPrograms": [ "UnrealFrontend", "UnrealInsights" ],
+	"SupportedTargetPlatforms":  [ "Win64" ],
 	"Modules" :
 	[
 		{
