OnlyEditorOnly: Make a separate setting for OnlyEditorOnly rather than using CanSkipEditorReferencedPackagesWhenCooking, so we can deprecate that separately later and still test OnlyEditorOnly. OnlyEditorOnly: Add Instrumentation to explain differences between regular cook and OnlyEditorOnly cook. #rb Zousar.Shaker #rnx #preflight 64556a9e4574b81df409a82b
[CL 25359675 by Matt Peters in ue5-main branch]

--- a/Engine/Config/BaseEditor.ini
+++ b/Engine/Config/BaseEditor.ini
@@ -315,6 +315,9 @@ MinFreeMemory=1024
 MaxUsedMemory=16384
 
 [CookSettings]
+; If true, the cook will only cook what is referenced by saved packages, rather than cooking every loaded package.
+; Packages that are only referenced by editoronly properties will be skipped.
+OnlyEditorOnly=false
 BulkDataRegistryEnabled=true
 ; HybridIterative uses the TargetDomain and BuildDependencies to decide when packages need to be recooked. If enabled,
 ; every cook is iterative for packages with allowed classes (IterativeClassAllowList) unless -noiterative is passed.
