Work on Localization: Use Localizable Message to replicate UI text to clients so that it is localized there.
[REVIEW] [at]tim.tillotson [at]jp.flouret [at]michael.nicolella [at]Patrick.Boutot [at]saam.barati won.chun[at]
#preflight 645537cd4574b81df4f9f342

[CL 25372972 by david punsetmartinez in ue5-main branch]

--- a/Engine/Plugins/Experimental/UIFramework/UIFramework.uplugin
+++ b/Engine/Plugins/Experimental/UIFramework/UIFramework.uplugin
@@ -25,6 +25,10 @@
 		{
 			"Name": "ModelViewViewModel",
 			"Enabled": true
+		},
+		{
+			"Name": "LocalizableMessage",
+			"Enabled": true
 		}
 	]
 }
