--- a/Engine/Plugins/Experimental/ChaosVD/ChaosVD.uplugin
+++ b/Engine/Plugins/Experimental/ChaosVD/ChaosVD.uplugin
@@ -21,5 +21,11 @@
 			"Type": "Editor",
 			"LoadingPhase": "Default"
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "GeometryProcessing",
+			"Enabled": true
+		}
 	]
 }
