Move VirtualCamera and VirtualCameraEditor to VirtualCamera plugin
#jira UE-185530
#rb none
#preflight https://horde.devtools.epicgames.com/job/645b76372d27fa25b33eb49a
#fyi Jason.Walter

[CL 25401856 by Dominik Peacock in ue5-main branch]

--- a/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
+++ b/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
@@ -32,6 +32,20 @@
 			"Name": "VCamExtensionsEditor",
 			"Type": "Editor",
 			"LoadingPhase": "Default"
+		},
+		{
+			"Name": "VirtualCamera",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"PlatformAllowList": [
+				"Win64",
+				"Linux"
+			]
+		},
+		{
+			"Name": "VirtualCameraEditor",
+			"Type": "Editor",
+			"LoadingPhase": "PostEngineInit"
 		}
 	],
 	"Plugins": [
@@ -46,6 +60,6 @@
 		{
 			"Name" : "VCamPixelStreamingPreset",
 			"Enabled": true
-		},
+		}
 	]
 }
