--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -3135,6 +3135,9 @@ DebugCameraBind=(Key=Tab,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 OnScreenDebugMessagesBind=(Key=Tab,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 GameHUDBind=(Key=Tilde,bShift=False,bCtrl=True,bAlt=False,bCmd=False)
 
+[/Script/GameFeatures.GameFeatureAction_AddChunkOverride]
+LowestAllowedChunkIndexForAutoGeneration=100
+
 [/Script/Engine.SkeletalMeshLODSettings]
 +LODGroups=(ScreenSize=(Default=1.0,PerPlatform=()),ReductionSettings=(NumOfTrianglesPercentage=.5))
 +LODGroups=(ScreenSize=(Default=.3,PerPlatform=()),ReductionSettings=(NumOfTrianglesPercentage=.25))
