--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2836,6 +2836,7 @@ bSupportsLandscapeRightOrientation=True
 PreferredLandscapeOrientation=LandscapeLeft
 bSupportsMetal=True
 bSupportsMetalMRT=False
+bSupportHighRefreshRates=False
 bGameSupportsMultipleActiveControllers=False
 bAllowRemoteRotation=True
 bUseAbsoluteDpadValues=False
