Skeletal Editing: Remove unnecessary plugin platform restriction.
#jira UE-185480
#rb trivial
#rnx
#preflight 645d3f02b71b8186aa77f14a

[CL 25433874 by halfdan ingvarsson in ue5-main branch]

--- a/Engine/Plugins/Experimental/Animation/SkeletalMeshModelingTools/SkeletalMeshModelingTools.uplugin
+++ b/Engine/Plugins/Experimental/Animation/SkeletalMeshModelingTools/SkeletalMeshModelingTools.uplugin
@@ -17,8 +17,7 @@
 		{
 			"Name": "SkeletalMeshModelingTools",
 			"Type": "Editor",
-			"LoadingPhase": "Default",
-			"PlatformAllowList": [ "Win64" ]
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
