Added tags and some more needed plugins for StateTrees and Gameplay Interactions in LyraExplorer
#changelist validated

[CL 25495038 by remi toupingaudet in ue5-main branch]

--- a/Samples/Games/Lyra/Lyra.uproject
+++ b/Samples/Games/Lyra/Lyra.uproject
@@ -315,11 +315,19 @@
 			"Enabled": true
 		},
 		{
+			"Name": "ContextualAnimation",
+			"Enabled": true
+		},
+		{
+			"Name": "GameplayBehaviorSmartObjects",
+			"Enabled": true
+		},
+		{
 			"Name": "GameplayStateTree",
 			"Enabled": true
 		},
 		{
-			"Name": "ContextualAnimation",
+			"Name": "GameplayBehaviors",
 			"Enabled": true
 		}
 	]
