iOS Project Settings cleanup #jira UE-182186 #rb adam.kingee #preflight 646471add62884a78f00612c
[CL 25503407 by axel riffard in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2870,7 +2870,6 @@ SSHPrivateKeyOverridePath=
 SecondarySSHPrivateKeyOverridePath=
 bEnableRemoteNotificationsSupport=False
 bEnableCloudKitSupport=False
-bRunAsCurrentUser=False
 bSupportSecondaryMac=False
 IOSCloudKitSyncStrategy=None
 bGenerateCrashReportSymbols=false
@@ -3030,7 +3029,7 @@ bBuildAllSupportedOnBuildMachine=true
 bEnableRayTracing=false
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
-bUseModernXcode=false
+bUseModernXcode=true
 bUseModernCodeSigning=true
 ModernSigningTeam=
 ModernSigningPrefix=com.YourCompany
