RigVM Editor Module first steps
#rb jaime.cifuentes
#jira UE-180106
#preflight https://horde.devtools.epicgames.com/job/6464c67f2d446eac96bbfe02

[CL 25505395 by Helge Mathee in ue5-main branch]

--- a/Engine/Plugins/Runtime/RigVM/RigVM.uplugin
+++ b/Engine/Plugins/Runtime/RigVM/RigVM.uplugin
@@ -25,6 +25,11 @@
 			"Name" : "RigVMDeveloper",
 			"Type" : "UncookedOnly",
 			"LoadingPhase" : "PreDefault"
+		},
+		{
+			"Name" : "RigVMEditor",
+			"Type" : "Editor",
+			"LoadingPhase" : "PostEngineInit"
 		}
 	]
 }
