Reverse modern xcode submitted by mistake #jira none #rb trivial #preflight none
[CL 25509295 by axel riffard in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -3029,7 +3029,7 @@ bBuildAllSupportedOnBuildMachine=true
 bEnableRayTracing=false
 
 [/Script/MacTargetPlatform.XcodeProjectSettings]
-bUseModernXcode=true
+bUseModernXcode=false
 bUseModernCodeSigning=true
 ModernSigningTeam=
 ModernSigningPrefix=com.YourCompany
